<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearlayout"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvWelcomeTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans_bold"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="26sp"
            android:visibility="visible" />

        <TextView
            android:id="@+id/tvWelcomeContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="22sp"
            android:visibility="visible" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_continue"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_background"
                android:buttonTint="@color/colorAccent"
                android:padding="16dp"
                android:text="@string/userInfoCheckboxHavingKidsOrPartner"
                android:textColor="@color/colorAccent" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_partnerkids"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="16dp"
            android:orientation="vertical"
            android:visibility="visible">

            <TextView
                android:id="@+id/tvInputName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans_light_italic"
                android:text="@string/userInfoInputPartner"
                android:textColor="@color/colorEdittextOutline" />

            <Spinner
                android:id="@+id/spinnerPartner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_background"
                android:padding="20dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_kidsage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:orientation="vertical"
            android:visibility="visible">


            <TextView
                android:id="@+id/tvInputKidsAge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans_light_italic"
                android:text="@string/userInfoInputKids"
                android:textColor="@color/colorEdittextOutline" />

            <CheckBox
                android:id="@+id/checkBoxTo6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorAccent"
                android:fontFamily="@font/open_sans"
                android:textColor="@color/colorAccent" />

            <CheckBox
                android:id="@+id/checkBoxTo18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorAccent"
                android:fontFamily="@font/open_sans"
                android:textColor="@color/colorAccent" />

            <CheckBox
                android:id="@+id/checkBoxTo21"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorAccent"
                android:fontFamily="@font/open_sans"
                android:textColor="@color/colorAccent" />

            <CheckBox
                android:id="@+id/checkBoxTo21Plus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorAccent"
                android:fontFamily="@font/open_sans"
                android:textColor="@color/colorAccent" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/button_continue"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/open_sans_bold"
        android:text="@string/basicInfoButton"
        android:textStyle="bold" />

</RelativeLayout>